# Teeny_Tiny_C_Compiler

./: Assignment2  Assignment2.cpp  CMakeLists.txt  LexicalAnalyzer.cpp  LexicalAnalyzer.h  README.md  SyntaxAnalyzer.cpp  SyntaxAnalyzer.h  Token.cpp  Token.h  TokenCodes.h  test1.c  test2.c  test3.c  test5.c  test6.c  test7.c
